Fafin about with tests / module structure + fix camel case method names.
